--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
 
       // You can use Fetch API or XMLHttpRequest to send the form data to your server.
       // Example using Fetch API:
-      fetch('http://your-api-url/fishify/upload_picture', {
+      fetch('http://34.42.35.171:4000/upload-and-detect-fish', {
         method: 'POST',
         body: formData,
       })
